add placeholder structure for navigation and content, with imported google fonts set up for body text and headings

--- a/index.html
+++ b/index.html
@@ -8,5 +8,32 @@
     <title>The Art of War</title>
 </head>
 <body>
+    <header>
+        <p>Gym name</p>
+    <nav>
+
+        <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">Lifts</a></li>
+            <li ><a href="#">Sign Up</a></li>
+        </ul>
+    </nav>
+    </header>
+    <!--Hero image-->>
+    <section id="hero-image-outer">
+            <div id="ready-for-war"><a href="#">call to action</a></div>
+    </section>
+    <section id="main content">Main content
+        <div>
+            <h1>heading 1</h1>
+        </div>
+        <div>
+            <h1>heading 2</h1>
+        </div>
+        <div>
+            <h1>heading 3</h1>
+        </div>
+    </section>
+    <footer></footer>
 </body>
 </html>
