add hero image and positioning for main call to action

--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
         </ul>
     </nav>
     </header>
-    <!--Hero image-->>
+
+    <!--Hero image-->
+
     <section id="hero-image-outer">
+    <div id="hero-cover">
+        <div id="hero-image">
+            <div id="hero-image-cover-opacity">
             <div id="ready-for-war"><a href="#">call to action</a></div>
+            </div>
+        </div>
+        </div>
     </section>
+
     <section id="main content">Main content
         <div>
             <h1>heading 1</h1>
@@ -34,6 +43,7 @@
             <h1>heading 3</h1>
         </div>
     </section>
+
     <footer></footer>
 </body>
 </html>
