nav bar styling with gym name to the right, greatly interesting and learning experience using the flexbox model for the first time, final styles not applied

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <p>Gym name</p>
     <nav>
 
-        <ul>
+        <ul class="navigation">
+            <li id="gym-name">The Art of War Gym</li>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Lifts</a></li>
             <li ><a href="#">Sign Up</a></li>
