call to action styling and positioning with a link to the main content

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
     <div id="hero-cover">
         <div id="hero-image">
             <div id="hero-image-cover-opacity">
-            <div id="ready-for-war"><a href="#">call to action</a></div>
+            <div id="ready-for-war">
+                <a id="main-action" href="#main-content">
+                    <h1>Prepare for war</h1></a>
             </div>
         </div>
         </div>
     </section>
 
-    <section id="main content">Main content
+    <section id="main-content">Main content
         <div>
             <h1>heading 1</h1>
         </div>
