add new styling to nav bar, only a few minor changes including structure of main-content class in index.html prepared for further development of the main-content sections

--- a/index.html
+++ b/index.html
@@ -34,18 +34,17 @@
         </div>
     </section>
 
-    <section id="main-content">Main content
-        <div>
-            <h1>heading 1</h1>
-        </div>
-        <div>
-            <h1>heading 2</h1>
-        </div>
-        <div>
-            <h1>heading 3</h1>
-        </div>
-    </section>
-
+        <div class="main-content">
+            <section>
+            <h1 id="who-are-we"> Who Are We?</h1>
+        </section>
+            <section id="what-do-we-do">
+            <h1>What do we do?</h1>
+        </section>
+            <section id="why-do-we-do-it">
+            <h1>Why do we do it?</h1>
+        </section>
+    </div>
     <footer></footer>
 </body>
 </html>
