testing between float or flexbox for main content, with errors and colour for the navigation and hero image section complete

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </div>
     </section>
 
-        <div class="main-content">
-            <section>
-            <h1 id="who-are-we"> Who Are We?</h1>
+        <div class="main-content-container">
+            <section id="who-are-we">
+            <h1 class="float-left"> Who Are We?</h1>
         </section>
-            <section id="what-do-we-do">
+            <section id="what-do-we-do" class="float-center">
             <h1>What do we do?</h1>
         </section>
-            <section id="why-do-we-do-it">
+            <section id="why-do-we-do-it" class="float-right">
             <h1>Why do we do it?</h1>
         </section>
     </div>
