First box of content added, initial styling, onto next content box

--- a/index.html
+++ b/index.html
@@ -27,21 +27,32 @@
         <div id="hero-image">
             <div id="hero-image-cover-opacity">
             <div id="ready-for-war">
-                <a id="main-action" href="#main-content">
+                <a id="main-action" href="#main-content-anchor">
                     <h1>Prepare for war</h1></a>
             </div>
         </div>
         </div>
     </section>
-
+    <a id="main-content-anchor"></a>
+        <hr>
         <div class="main-content-container">
             <section id="who-are-we">
-            <h1 class="float-left"> Who Are We?</h1>
-        </section>
-            <section id="what-do-we-do" class="float-center">
+            <h1> Who Are We?</h1>
+            <p>We are a small community of the toughest and most raw powerlifting, 
+                bodybuilding and crossfit enthusiasts making a name for ourselves 
+                in the world of <span class="red-large-strong-text">power and strength.</span></p>
+                <p>Our Staff, and what they bring to the gym, in their own words:</p>
+                <h2>Robert Mignot</h2>
+                <em>I'm classically trained powerlifter and coach who likes to take his lifting apprentices through the old school methodology and psychology of making the weight move. I love a minimalist approach with less fuss of technicalities in regards to powerlifting regulations and we <span class="red-large-strong-text">DO NOT CUT CORNERS.<span></em>
+                <h2>Stavros Panayi</h2>
+                <em>Whilst I still adhere to the gym's ethos and sport's professional conventions, I specialize in the inverse of my fellow coach Bob. He takes things to the extreme in strength where I focus more on the techniques to add more weight to your lifts in strict accordance with the International Powerlifting Federation, allowing you <span class ="red-large-strong-text"> UNLEASH YOUR FULL POTENTIAL</span>, essentially learning how to max-out in competitions safely. It's not as simple as 'cutting corners'.</em>
+                <h2>Teresa Gold</h2>
+                <em>I'm the resident specialist in physiotherapy and body maintenance. Powerlifting, bodybuilding and crossfit can all be <span class="red-large-strong-text">VERY DANGEROUS SPORTS.</span> It's my job to ensure all measures possible are taken by our athletes to prevent injury, and when they may occur, to implement proper physiotherapeutic programs to ensure no permanent damage is done, and that they may continue lifting as soon as possible</em>
+                </section>
+            <section id="what-do-we-do">
             <h1>What do we do?</h1>
         </section>
-            <section id="why-do-we-do-it" class="float-right">
+            <section id="why-do-we-do-it">
             <h1>Why do we do it?</h1>
         </section>
     </div>
