Added some content into the second main content box 'what we do' needs more content and styling with final box and footer to be completed media queries too. encountered some gitpod issues and will reslove them tonight picking up finishing the home page tommorrow

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         </div>
     </section>
+    <!--Main content of home page-->
     <a id="main-content-anchor"></a>
         <hr>
         <div class="main-content-container">
@@ -51,6 +52,8 @@
                 </section>
             <section id="what-do-we-do">
             <h1>What do we do?</h1>
+            <p>Our level of performance in our community is second-to-none, so therefore we urge all new members to consider the <span class="red-large-strong-text">extremely physically and mentally demanding</span> nature of our sports and that we only encourage fairly experienced individuals in the gym to join us for more specialist training.
+            </p>
         </section>
             <section id="why-do-we-do-it">
             <h1>Why do we do it?</h1>
