Add final content for main content boxes, now moving to background image and footer

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         <ul class="navigation">
             <li id="gym-name">The Art of War Gym</li>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Lifts</a></li>
-            <li ><a href="#">Sign Up</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="lifts.html">Lifts</a></li>
+            <li ><a href="sign-up.html">Sign Up</a></li>
         </ul>
     </nav>
     </header>
@@ -25,7 +25,7 @@
     <section id="hero-image-outer">
     <div id="hero-cover">
         <div id="hero-image">
-            <div id="hero-image-cover-opacity">
+            <div class="background-image-cover-opacity">
             <div id="ready-for-war">
                 <a id="main-action" href="#main-content-anchor">
                     <h1>Prepare for war</h1></a>
@@ -52,13 +52,30 @@
                 </section>
             <section id="what-do-we-do">
             <h1>What do we do?</h1>
-            <p>Our level of performance in our community is second-to-none, so therefore we urge all new members to consider the <span class="red-large-strong-text">extremely physically and mentally demanding</span> nature of our sports and that we only encourage fairly experienced individuals in the gym to join us for more specialist training.
+            <p>We provide the necessities for primarily experienced lifters looking to further themselves in their goals of strength, bodily function and health through a social community both in and out of the gym.
+                Our level of performance in our community is second-to-none, so therefore we urge all new members to consider the <span class="red-large-strong-text">extremely physically and mentally demanding</span> nature of our sports and that we only encourage fairly experienced individuals in the gym to join us for more specialist training.
             </p>
+            <p>What we provide:</p>
+            <ul class="list">
+                <li><span class="red-large-strong-text">Qualified and certified </span>to industry regulation powerlifting and crossfit coaching</li>
+                <li>Regular meetups and competitions under IFP and Crossfit regulations</li>
+                <li>Specialist training equipment</li>
+                <li>Our <span class="red-large-strong-text">'Apprentice program'</span> A One-to-one personal training scheme focused around long term trainer-althlete bonding and relationship growth (only for those serious about competeing professionally).</li>
+                <li>Post and pre-workout physiotherapy with our specialists</li>
+                <li>One of a kind social community of like-minded lifters and enthusiats in the sports</li>
+            </ul>
         </section>
             <section id="why-do-we-do-it">
             <h1>Why do we do it?</h1>
+            <p><span class="red-large-strong-text">The Art of War</span> strives to be social, a place where bonds are formed unlike any other, through blood and sweat. </p>
+                <p>Our Ethos is simple, once our athletes set foot into our gym, they forget the outside world and put their heart and body into their training for an hour or two completely removed from their troubles or triumphs outside of the gym. For the duration of their training they <span class="red-large-strong-text"> unleash their potential</span> and put in the work day in, day out with a true passion for what our gym stands for.</p>
+                <p>If you like the look of our gym, appreciate our vital place to test humanity's limits, and wish to be apart of our communit and <span class="red-large-strong-text">unleash your full potential</span>, please visit our <a href="sign-up.html">Sign Up page.</a></p>
+                <p>If you would like to learn more about how our cardinal values translates into actual performance, please visit our <a href="lifts.html">Lifts page</a></p>
+                <p>Alternatively, perhaps if you are local to us and wish to simply gaze in awe at our feats of strength and fitness, you can find our location below.</p>
         </section>
     </div>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
