--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </div>
         </div>
     </section>
+
     <!--Main content of home page-->
+
     <a id="main-content-anchor"></a>
         <hr>
         <div class="main-content-container">
@@ -74,10 +76,20 @@
                 <p>Alternatively, perhaps if you are local to us and wish to simply gaze in awe at our feats of strength and fitness, you can find our location below.</p>
         </section>
     </div>
+
     <!--iframe google maps gym location-->
+
     <div id="map-container"><iframe id="map" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=19%20Kenyon%20St,%20Birmingham%20B18%206AR+(Temple%20Gym)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="/index.html">Gym Location</a></iframe></div>
+
     <footer>
-        
+    <ul id="footer-social-media">
+        <li><strong>Copyright Art of War Gym 2020 &copy;</strong></li>
+        <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="https://twitch.com" target="_blank"><i class="fab fa-twitch"></i></a></li>
+    </ul>
     </footer>
 </body>
+<!-- Used same icons as the love running project, as they were the easiest and cleanest looking I could find for the style of my site-->
+<script src="https://kit.fontawesome.com/606eb7358d.js" crossorigin="anonymous"></script>
 </html>
