--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <footer>
     <ul id="footer-social-media">
-        <li><strong>Copyright Art of War Gym 2020 &copy;</strong></li>
+        <li id="footer-copyright"><strong>Copyright Art of War Gym 2020 &copy;</strong></li>
         <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://twitch.com" target="_blank"><i class="fab fa-twitch"></i></a></li>
