Added further file structure and started to include videos and images for the lifts page, with testing for different layouts and methods of display

--- a/lifts.html
+++ b/lifts.html
@@ -19,5 +19,9 @@
             </ul>
         </nav>
         </header>
+
+        <div id="lifts=container">
+           
+        </div>
 </body>
 </html>
