Added first features to the lifts.html page, including the first three video tags with one having a source for the featured lifts, first skeleton structure of the male and female records tables and the embedded youtube video for the special spotlight on greg doucette's world record deadlift in one minute. Also added a footer and brief styling for placeholder styling

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <footer>
     <ul id="footer-social-media">
-        <li id="footer-copyright"><strong>Copyright Art of War Gym 2020 &copy;</strong></li>
+        <li id="footer-copyright"><strong>Code Institue Project One Copyright 2022 &copy;</strong></li>
         <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://twitch.com" target="_blank"><i class="fab fa-twitch"></i></a></li>
