--- a/lifts.html
+++ b/lifts.html
@@ -20,8 +20,81 @@
         </nav>
         </header>
 
+        <!--Three featured feats of strength on video-->
+
         <div id="lifts=container">
+           <video class="lift-video" controls>
+            <source src="/assets/videos/Anders-Bench.mp4">
+           </video class="lift-video" controls>
+
+           <video controls>
+
+           </video>
            
+           <video class="lift-video"controls>
+
+           </video>
         </div>
+
+        <!--Complete table of lifts-->
+
+        <div class="lifts-table">
+            <h3>Male</h3>
+            <table>
+                <tr>
+                    <th>Weight division</th> <th>Name</th><th>Lift</th><th>Weight lifted</th>
+                </tr>
+                <tr>
+                    <td>65</td>
+                </tr>
+                <tr>
+                    <td>75</td>
+                </tr>
+                <tr>
+                    <td>85</td>
+                </tr>
+                <tr>
+                    <td>95</td>
+                </tr>
+                <tr>
+                    <td>105+</td>
+                </tr>
+            </table>
+            <h3>Female</h3>
+            <table>
+                <tr>
+                    <th>Weight division</th> <th>Name</th><th>Lift</th><th>Weight lifted</th>
+                </tr>
+                <tr>
+                    <td>65</td>
+                </tr>
+                <tr>
+                    <td>75</td>
+                </tr>
+                <tr>
+                    <td>85</td>
+                </tr>
+                <tr>
+                    <td>95</td>
+                </tr>
+                <tr>
+                    <td>105+</td>
+                </tr>
+            </table>
+        </div>
+
+        <!--Spotlight of an athlete on the news-->
+
+        <div class="lift-spotlight">
+            <iframe id="deadlift-record-spotlight" src="https://www.youtube.com/embed/vDv9kMqxCA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <footer>
+            <ul id="footer-social-media">
+                <li id="footer-copyright"><strong>Code Institue Project One Copyright 2022 &copy;</strong></li>
+                <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://twitch.com" target="_blank"><i class="fab fa-twitch"></i></a></li>
+            </ul>
+            </footer>
 </body>
 </html>
