Added final trimmed videos for the squat and deadlift featured lifts

--- a/lifts.html
+++ b/lifts.html
@@ -25,14 +25,14 @@
         <div id="lifts=container">
            <video class="lift-video" controls>
             <source src="/assets/videos/Anders-Bench.mp4">
-           </video class="lift-video" controls>
-
-           <video controls>
-
            </video>
-           
-           <video class="lift-video"controls>
 
+           <video class="lift-video" controls>
+            <source src="/assets/videos/Female-Deadlift-WR-trimmed.mp4">
+           </video>
+
+           <video class="lift-video"controls>
+            <source src="/assets/videos/ray-williams-squat-wr.mp4">
            </video>
         </div>
 
