Added first styling. found trouble with structure of divs for featured videos. Needs to be polished

--- a/lifts.html
+++ b/lifts.html
@@ -20,20 +20,32 @@
         </nav>
         </header>
 
+        <div id="background-image">
+
         <!--Three featured feats of strength on video-->
+        <h1 id="lift-title">Featured Lifts</h1>
 
-        <div id="lifts=container">
-           <video class="lift-video" controls>
-            <source src="/assets/videos/Anders-Bench.mp4">
-           </video>
+        <div id="lift-container">
+            <div class="lift-video"><p>Julius Maddox past World Record bench press for 330kg.</p>
+                <em>Video courtesy of Lifting Vault YouTube channel</em>
+                <video controls muted>
+                <source src="/assets/videos/julius-maddox-bench-wr.mp4">
+               </video>
+            </div>
 
-           <video class="lift-video" controls>
-            <source src="/assets/videos/Female-Deadlift-WR-trimmed.mp4">
-           </video>
+            <div class="lift-video"><p>Tamara Walcot past World Record women's deadlift for 288.5kg.</p> 
+                <em>Video courtesy of Lifting Vault YouTube channel</em>
+                <video controls muted>
+                    <source src="/assets/videos/Female-Deadlift-WR-trimmed.mp4">
+                   </video>
+                </div>
 
-           <video class="lift-video"controls>
-            <source src="/assets/videos/ray-williams-squat-wr.mp4">
-           </video>
+            <div class="lift-video"><p>Ray Williams World Record Male squat for 490kg.</p> 
+                <em>Video courtesy of Lifting Vault YouTube channel</em>
+                <video controls muted>
+                    <source src="/assets/videos/ray-williams-squat-wr.mp4">
+                    </video>
+                </div>
         </div>
 
         <!--Complete table of lifts-->
@@ -88,6 +100,7 @@
         <div class="lift-spotlight">
             <iframe id="deadlift-record-spotlight" src="https://www.youtube.com/embed/vDv9kMqxCA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        </div>
         <footer>
             <ul id="footer-social-media">
                 <li id="footer-copyright"><strong>Code Institue Project One Copyright 2022 &copy;</strong></li>
@@ -97,4 +110,6 @@
             </ul>
             </footer>
 </body>
+<!-- Used same icons as the love running project, as they were the easiest and cleanest looking I could find for the style of my site-->
+<script src="https://kit.fontawesome.com/606eb7358d.js" crossorigin="anonymous"></script>
 </html>
