Finalised the desktop styling for the featured lifts feature of the lifts.html page

--- a/lifts.html
+++ b/lifts.html
@@ -23,10 +23,10 @@
         <div id="background-image">
 
         <!--Three featured feats of strength on video-->
-        <h1 id="lift-title">Featured Lifts</h1>
+        <h1 class="page-title">Featured Lifts</h1>
 
         <div id="lift-container">
-            <div class="lift-video"><p>Julius Maddox past World Record bench press for 330kg.</p>
+            <div class="lift-video"><p>Julius Maddox past World Record male bench press for 330kg.</p>
                 <em>Video courtesy of Lifting Vault YouTube channel</em>
                 <video controls muted>
                 <source src="/assets/videos/julius-maddox-bench-wr.mp4">
@@ -40,7 +40,7 @@
                    </video>
                 </div>
 
-            <div class="lift-video"><p>Ray Williams World Record Male squat for 490kg.</p> 
+            <div class="lift-video"><p>Ray Williams World Record male squat for 490kg.</p> 
                 <em>Video courtesy of Lifting Vault YouTube channel</em>
                 <video controls muted>
                     <source src="/assets/videos/ray-williams-squat-wr.mp4">
