Added final fabricated content for the lifting table with revelant and appropriate values for the weight classes and lifting totals. Added the styling and positioning to the table. Onto the Sptolight documentary embedded video

--- a/lifts.html
+++ b/lifts.html
@@ -50,47 +50,49 @@
 
         <!--Complete table of lifts-->
 
-        <div class="lifts-table">
+        <div id="lifts-table-container">
+            <h2>Overall lifting total</h2>
+            <p>A lifting total is the combined total weight of all three main lifts; squat, deadlift and bench press.</p>
             <h3>Male</h3>
-            <table>
+            <table class="lifts-table">
                 <tr>
-                    <th>Weight division</th> <th>Name</th><th>Lift</th><th>Weight lifted</th>
+                    <th>Weight division (kg)</th> <th>Name</th><th>Total (kg)</th>
                 </tr>
                 <tr>
-                    <td>65</td>
+                    <td>65</td><td>John Smith</td><td>389</td>
                 </tr>
                 <tr>
-                    <td>75</td>
+                    <td>75</td><td>Simon Fulton</td><td>442</td>
                 </tr>
                 <tr>
-                    <td>85</td>
+                    <td>85</td><td>Terry Phillips</td><td>492</td>
                 </tr>
                 <tr>
-                    <td>95</td>
+                    <td>95</td><td>Micheal Wazowski</td><td>538</td>
                 </tr>
                 <tr>
-                    <td>105+</td>
+                    <td>105+</td><td>Sullivan James</td><td>603</td>
                 </tr>
             </table>
             <h3>Female</h3>
-            <table>
+            <table class="lifts-table">
                 <tr>
-                    <th>Weight division</th> <th>Name</th><th>Lift</th><th>Weight lifted</th>
+                    <th>Weight division (kg)</th><th>Name</th><th>Total (kg)</th>
                 </tr>
                 <tr>
-                    <td>65</td>
+                    <td>55</td><td>Elizaveta Chernikova</td><td>255</td>
                 </tr>
                 <tr>
-                    <td>75</td>
+                    <td>65</td><td>Eleanor Fitzgerald</td><td>280</td>
                 </tr>
                 <tr>
-                    <td>85</td>
+                    <td>75</td><td>Millie Charlton</td><td>302</td>
                 </tr>
                 <tr>
-                    <td>95</td>
+                    <td>85</td><td>Pauline Tammy-Lynn</td><td>322</td>
                 </tr>
                 <tr>
-                    <td>105+</td>
+                    <td>95+</td><td>Lucy Reagan</td><td>349</td>
                 </tr>
             </table>
         </div>
