Finalised styling for desktop viewports for the lifts.html page, onto responsiveness then finally the sign-up.html page

--- a/lifts.html
+++ b/lifts.html
@@ -99,10 +99,13 @@
 
         <!--Spotlight of an athlete on the news-->
 
-        <div class="lift-spotlight">
+        <div id="spotlight-container">
+            <h2>Special Lift Spotlight</h2>
+            <p>Greg Doucette is an IFBB professional bodybuilder and a world-class record holder powerlifter. Greg's ideals he promotes of <span class="red-large-strong-text">training harder than last time</span> gave us no option but to share the incredible feat of strength he accomplished breaking the world record for heaviest deadlift completed in one minute.</p>
             <iframe id="deadlift-record-spotlight" src="https://www.youtube.com/embed/vDv9kMqxCA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
+        
         <footer>
             <ul id="footer-social-media">
                 <li id="footer-copyright"><strong>Code Institue Project One Copyright 2022 &copy;</strong></li>
