--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
         </div>
         </div>
+        </div>
     </section>
 
     <!--Main content of home page-->
@@ -46,7 +47,7 @@
                 in the world of <span class="red-large-strong-text">power and strength.</span></p>
                 <p>Our Staff, and what they bring to the gym, in their own words:</p>
                 <h2>Robert Mignot</h2>
-                <em>I'm classically trained powerlifter and coach who likes to take his lifting apprentices through the old school methodology and psychology of making the weight move. I love a minimalist approach with less fuss of technicalities in regards to powerlifting regulations and we <span class="red-large-strong-text">DO NOT CUT CORNERS.<span></em>
+                <em>I'm classically trained powerlifter and coach who likes to take his lifting apprentices through the old school methodology and psychology of making the weight move. I love a minimalist approach with less fuss of technicalities in regards to powerlifting regulations and we <span class="red-large-strong-text">DO NOT CUT CORNERS.</span></em>
                 <h2>Stavros Panayi</h2>
                 <em>Whilst I still adhere to the gym's ethos and sport's professional conventions, I specialize in the inverse of my fellow coach Bob. He takes things to the extreme in strength where I focus more on the techniques to add more weight to your lifts in strict accordance with the International Powerlifting Federation, allowing you <span class ="red-large-strong-text"> UNLEASH YOUR FULL POTENTIAL</span>, essentially learning how to max-out in competitions safely. It's not as simple as 'cutting corners'.</em>
                 <h2>Teresa Gold</h2>
@@ -79,7 +80,7 @@
 <hr>
     <!--iframe google maps gym location-->
 
-    <div id="map-container"><iframe id="map" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=19%20Kenyon%20St,%20Birmingham%20B18%206AR+(Temple%20Gym)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="/index.html">Gym Location</a></iframe></div>
+    <div id="map-container"><iframe id="map" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=19%20Kenyon%20St,%20Birmingham%20B18%206AR+(Temple%20Gym)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
 
     <footer>
     <ul id="footer-social-media">
@@ -89,7 +90,7 @@
         <li><a href="https://twitch.com" target="_blank"><i class="fab fa-twitch"></i></a></li>
     </ul>
     </footer>
+    <!-- Used same icons as the love running project, as they were the easiest and cleanest looking I could find for the style of my site-->
+    <script src="https://kit.fontawesome.com/606eb7358d.js" crossorigin="anonymous"></script>
 </body>
-<!-- Used same icons as the love running project, as they were the easiest and cleanest looking I could find for the style of my site-->
-<script src="https://kit.fontawesome.com/606eb7358d.js" crossorigin="anonymous"></script>
 </html>
