--- a/sign-up.html
+++ b/sign-up.html
@@ -19,5 +19,45 @@
             </ul>
         </nav>
         </header>
+        <div id="background-image">
+            <h1 class="page-title">Sign Up</h1>
+            <div id="form-container">
+            <form action="#" method="post">
+                <div id="about-you-column">
+                    <h2>About you</h2>
+                <label for="name"></label>Name<input type="text" id="name" name="name">
+                <label for="email"></label>Email<input type="email" id="email" name="email">
+                <label for="date-of-birth">Date of Birth</label><input type="date" id="date-of-birth" name="date-of-birth">
+            </div>
+            <div id="experience-column">
+                <h2>Your Experience</h2>
+
+                <label for="powerlifting"></label>Powerlifting<select type="text" id="powerlifting" name="powerlifting" list="experience">
+                    <option value="beginner">Beginner</option>
+                    <option value="intermediate">Intermediate</option>
+                    <option value="advanced">Advanced</option>
+                    <option value="professional">Professional</option>
+                </select>
+                <label for="crossfit"></label>Crossfit<select type="text" id="crossfit" name="crossfit" list="experience">
+                    <option value="beginner">Beginner</option>
+                    <option value="intermediate">Intermediate</option>
+                    <option value="advanced">Advanced</option>
+                    <option value="professional">Professional</option>
+                </select>
+                <label for="bodybuilding"></label>Bodybuilding<select type="text" id="bodybuilding" name="bodybuilding" list="experience">
+                    <option value="beginner">Beginner</option>
+                    <option value="intermediate">Intermediate</option>
+                    <option value="advanced">Advanced</option>
+                    <option value="professional">Professional</option>
+                </select>
+            </div>
+            <div id="form-bottom">
+            <textarea id="additional-comments" placeholder="Addtional comments">
+            </textarea>
+            <button type="reset">Rest</button><button type="Submit">Submit</button>
+            </div>
+            </form>       
+        </div>
+        </div>
 </body>
 </html>
