Form styled into two columns using flexbox, with the form-bottom container being justiffied to the bottom to allow for user expected buttons and final/additional comments to be at the end of the form

--- a/sign-up.html
+++ b/sign-up.html
@@ -22,7 +22,7 @@
         <div id="background-image">
             <h1 class="page-title">Sign Up</h1>
             <div id="form-container">
-            <form action="#" method="post">
+            <form action="#" method="post" id="form">
                 <div id="about-you-column">
                     <h2>About you</h2>
                 <label for="name"></label>Name<input type="text" id="name" name="name">
