Final responsiveness for the moment, testing completed. In need of a thrid party and actual viewport sizes for testing not just browser dev tools as this caused some issues on previous pages. Final testing etc to be completed before focus on README.md

--- a/sign-up.html
+++ b/sign-up.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         </header>
-        <div id="lifts-background-image">
+        <div id="sign-up-background-image">
             <h1 class="page-title">Sign Up</h1>
             <h2 id="our-email">Our Email: artofwargym@gmail.com</h2>
             <div id="form-container">
@@ -81,5 +81,15 @@
             </form>       
         </div>
         </div>
+        <footer>
+            <ul id="footer-social-media">
+                <li id="footer-copyright"><strong>Code Institue Project One Copyright 2022 &copy;</strong></li>
+                <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://twitch.com" target="_blank"><i class="fab fa-twitch"></i></a></li>
+            </ul>
+            </footer>
+            <!-- Used same icons as the love running project, as they were the easiest and cleanest looking I could find for the style of my site-->
+    <script src="https://kit.fontawesome.com/606eb7358d.js" crossorigin="anonymous"></script>
 </body>
 </html>
