Added aria labels along with more fixes for image and video links

--- a/sign-up.html
+++ b/sign-up.html
@@ -15,9 +15,9 @@
         <nav>
             <ul class="navigation">
                 <li id="gym-name">The Art of War Gym</li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="lifts.html">Lifts</a></li>
-                <li ><a href="sign-up.html" class="active">Sign Up</a></li>
+                <li><a href="index.html" aria-label="Go to our home page">Home</a></li>
+                <li><a href="lifts.html" aria-label="Go to our lifts page">Lifts</a></li>
+                <li ><a href="sign-up.html" class="active" aria-label="Go to our sign up page">Sign Up</a></li>
             </ul>
         </nav>
         </header>
@@ -84,9 +84,9 @@
         <footer>
             <ul id="footer-social-media">
                 <li id="footer-copyright"><strong>Code Institue Project One Copyright 2022 &copy;</strong></li>
-                <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="https://twitch.com" target="_blank"><i class="fab fa-twitch"></i></a></li>
+                <li><a href="https://twitter.com" target="_blank" aria-label="go to our twitter"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://facebook.com" target="_blank" aria-label="go to our facebook"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://twitch.com" target="_blank" aria-label="go to our twitch"><i class="fab fa-twitch"></i></a></li>
             </ul>
             </footer>
             <!-- Used same icons as the love running project, as they were the easiest and cleanest looking I could find for the style of my site-->
