Final validations completed for html and css with amends made to errors

--- a/lifts.html
+++ b/lifts.html
@@ -102,7 +102,7 @@
         <div id="spotlight-container">
             <h2>Special Lift Spotlight</h2>
             <p>Greg Doucette is an IFBB professional bodybuilder and a world-class record holder powerlifter. Greg's ideals he promotes of <span class="red-large-strong-text">training harder than last time</span> gave us no option but to share the incredible feat of strength he accomplished breaking the world record for heaviest deadlift completed in one minute.</p>
-            <iframe id="deadlift-record-spotlight" src="https://www.youtube.com/embed/vDv9kMqxCA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="deadlift-record-spotlight" src="https://www.youtube.com/embed/vDv9kMqxCA8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
         
@@ -114,7 +114,8 @@
                 <li><a href="https://twitch.com" target="_blank" aria-label="go to our twitch"><i class="fab fa-twitch"></i></a></li>
             </ul>
             </footer>
-</body>
 <!-- Used same icons as the love running project, as they were the easiest and cleanest looking I could find for the style of my site-->
 <script src="https://kit.fontawesome.com/606eb7358d.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
