--- a/sign-up.html
+++ b/sign-up.html
@@ -47,21 +47,24 @@
             <div id="experience-column">
                 <h2>Your Experience</h2>
                 <br>
-                <label for="powerlifting">Powerlifting: </label><select type="text" id="powerlifting" name="powerlifting" list="experience" required>
+                <label for="powerlifting">Powerlifting: </label><select id="powerlifting" name="powerlifting" required>
+                    <option value="">Choose</option>
                     <option value="beginner">Beginner</option>
                     <option value="intermediate">Intermediate</option>
                     <option value="advanced">Advanced</option>
                     <option value="professional">Professional</option>
                 </select>
                 <br>
-                <label for="crossfit">Crossfit: </label><select type="text" id="crossfit" name="crossfit" list="experience" required>
+                <label for="crossfit">Crossfit: </label><select id="crossfit" name="crossfit" required>
+                    <option value="">Choose</option>
                     <option value="beginner">Beginner</option>
                     <option value="intermediate">Intermediate</option>
                     <option value="advanced">Advanced</option>
                     <option value="professional">Professional</option>
                 </select>
                 <br>
-                <label for="bodybuilding">Bodybuilding: </label><select type="text" id="bodybuilding" name="bodybuilding" list="experience" required>
+                <label for="bodybuilding">Bodybuilding: </label><select id="bodybuilding" name="bodybuilding" required>
+                    <option value="">Choose</option>
                     <option value="beginner">Beginner</option>
                     <option value="intermediate">Intermediate</option>
                     <option value="advanced">Advanced</option>
