Same commit as previeous, missed unsaved files

--- a/lifts.html
+++ b/lifts.html
@@ -108,7 +108,7 @@
         
         <footer>
             <ul id="footer-social-media">
-                <li id="footer-copyright"><strong>Code Institue Project One Copyright 2022 &copy;</strong></li>
+                <li id="footer-copyright"><strong>Code Institute Project One Copyright 2022 &copy;</strong></li>
                 <li><a href="https://twitter.com" target="_blank" aria-label="go to our twitter"><i class="fab fa-twitter-square"></i></a></li>
                 <li><a href="https://facebook.com" target="_blank" aria-label="go to our facebook"><i class="fab fa-facebook-square"></i></a></li>
                 <li><a href="https://twitch.com" target="_blank" aria-label="go to our twitch"><i class="fab fa-twitch"></i></a></li>
