Spelling mistakes after review of text content and README.md file corrected

--- a/lifts.html
+++ b/lifts.html
@@ -26,21 +26,21 @@
         <h1 class="page-title">Featured Lifts</h1>
 
         <div id="lift-container">
-            <div class="lift-video"><p>Julius Maddox past World Record male bench press for 330kg.</p>
+            <div class="lift-video"><p>Julius Maddox, past World Record male bench press for 330kg.</p>
                 <em>Video courtesy of Lifting Vault YouTube channel</em>
                 <video controls muted>
                 <source src="assets/videos/julius-maddox-bench-wr.mp4">
                </video>
             </div>
 
-            <div class="lift-video"><p>Tamara Walcot past World Record women's deadlift for 288.5kg.</p> 
+            <div class="lift-video"><p>Tamara Walcot, past World Record women's deadlift for 288.5kg.</p> 
                 <em>Video courtesy of Lifting Vault YouTube channel</em>
                 <video controls muted>
                     <source src="assets/videos/Female-Deadlift-WR-trimmed.mp4">
                    </video>
                 </div>
 
-            <div class="lift-video"><p>Ray Williams World Record male squat for 490kg.</p> 
+            <div class="lift-video"><p>Ray Williams, World Record male squat for 490kg.</p> 
                 <em>Video courtesy of Lifting Vault YouTube channel</em>
                 <video controls muted>
                     <source src="assets/videos/ray-williams-squat-wr.mp4">
@@ -68,7 +68,7 @@
                     <td>85</td><td>Terry Phillips</td><td>492</td>
                 </tr>
                 <tr>
-                    <td>95</td><td>Micheal Wazowski</td><td>538</td>
+                    <td>95</td><td>Michael Wazowski</td><td>538</td>
                 </tr>
                 <tr>
                     <td>105+</td><td>Sullivan James</td><td>603</td>
@@ -101,7 +101,7 @@
 
         <div id="spotlight-container">
             <h2>Special Lift Spotlight</h2>
-            <p>Greg Doucette is an IFBB professional bodybuilder and a world-class record holder powerlifter. Greg's ideals he promotes of <span class="red-large-strong-text">training harder than last time</span> gave us no option but to share the incredible feat of strength he accomplished breaking the world record for heaviest deadlift completed in one minute.</p>
+            <p>Greg Doucette is an IFBB professional bodybuilder and a world-class record holder powerlifter. The ideals Greg promotes of <span class="red-large-strong-text">training harder than last time</span> gave us no option but to share the incredible feat of strength he accomplished breaking the world record for heaviest deadlift completed in one minute.</p>
             <iframe id="deadlift-record-spotlight" src="https://www.youtube.com/embed/vDv9kMqxCA8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
