--- a/index.html
+++ b/index.html
@@ -47,33 +47,33 @@
                 in the world of <span class="red-large-strong-text">power and strength.</span></p>
                 <p>Our Staff, and what they bring to the gym, in their own words:</p>
                 <h2>Robert Mignot</h2>
-                <em>I'm classically trained powerlifter and coach who likes to take his lifting apprentices through the old school methodology and psychology of making the weight move. I love a minimalist approach with less fuss of technicalities in regards to powerlifting regulations and we <span class="red-large-strong-text">DO NOT CUT CORNERS.</span></em>
+                <em>I'm a classically trained powerlifter and coach who likes to take his lifting apprentices through the old-school methodology and psychology of making the weight move. I love a minimalist approach with less fuss of technicalities in regards to powerlifting regulations and we <span class="red-large-strong-text">DO NOT CUT CORNERS.</span></em>
                 <h2>Stavros Panayi</h2>
-                <em>Whilst I still adhere to the gym's ethos and sport's professional conventions, I specialize in the inverse of my fellow coach Bob. He takes things to the extreme in strength where I focus more on the techniques to add more weight to your lifts in strict accordance with the International Powerlifting Federation, allowing you <span class ="red-large-strong-text"> UNLEASH YOUR FULL POTENTIAL</span>, essentially learning how to max-out in competitions safely. It's not as simple as 'cutting corners'.</em>
+                <em>Whilst I still adhere to the gym's ethos and sport's professional conventions, I specialise in the inverse of my fellow coach Bob. He takes things to the extreme in strength whereas I focus more on the techniques to add more weight to your lifts in strict accordance with the International Powerlifting Federation, allowing you to <span class ="red-large-strong-text"> UNLEASH YOUR FULL POTENTIAL</span>, essentially learning how to max-out in competitions safely. It's not as simple as 'cutting corners'.</em>
                 <h2>Teresa Gold</h2>
-                <em>I'm the resident specialist in physiotherapy and body maintenance. Powerlifting, bodybuilding and crossfit can all be <span class="red-large-strong-text">VERY DANGEROUS SPORTS.</span> It's my job to ensure all measures possible are taken by our athletes to prevent injury, and when they may occur, to implement proper physiotherapeutic programs to ensure no permanent damage is done, and that they may continue lifting as soon as possible</em>
+                <em>I'm the resident specialist in physiotherapy and body maintenance. Powerlifting, bodybuilding and crossfit can all be <span class="red-large-strong-text">VERY DANGEROUS SPORTS.</span> It's my job to ensure all measures possible are taken by our athletes to prevent injury, and when they may occur, to implement proper physiotherapeutic programs to ensure no permanent damage is done, and that the athletes may continue lifting as soon as possible.</em>
                 </section>
             <section id="what-do-we-do">
             <h1>What do we do?</h1>
-            <p>We provide the necessities for primarily experienced lifters looking to further themselves in their goals of strength, bodily function and health through a social community both in and out of the gym.
+            <p>We provide the necessities for primarily experienced lifters looking to further themselves in their goals of strength, bodily function and health, through a social community both in and out of the gym.
                 Our level of performance in our community is second-to-none, so therefore we urge all new members to consider the <span class="red-large-strong-text">extremely physically and mentally demanding</span> nature of our sports and that we only encourage fairly experienced individuals in the gym to join us for more specialist training.
             </p>
             <p>What we provide:</p>
             <ul class="list">
                 <li><span class="red-large-strong-text">Qualified and certified </span>to industry regulation powerlifting and crossfit coaching</li>
-                <li>Regular meetups and competitions under IFP and Crossfit regulations</li>
+                <li>Regular meet-ups and competitions under IFP and crossfit regulations</li>
                 <li>Specialist training equipment</li>
-                <li>Our <span class="red-large-strong-text">'Apprentice program'</span> A One-to-one personal training scheme focused around long term trainer-althlete bonding and relationship growth (only for those serious about competeing professionally).</li>
+                <li>Our <span class="red-large-strong-text">'Apprentice program'</span> A one-to-one personal training scheme focused around long-term trainer-athlete bonding and relationship growth (only for those serious about competing professionally).</li>
                 <li>Post and pre-workout physiotherapy with our specialists</li>
-                <li>One of a kind social community of like-minded lifters and enthusiats in the sports</li>
+                <li>One-of-a-kind social community of like-minded lifters and enthusiasts in the sports</li>
             </ul>
         </section>
             <section id="why-do-we-do-it">
             <h1>Why do we do it?</h1>
             <p><span class="red-large-strong-text">The Art of War</span> strives to be social, a place where bonds are formed unlike any other, through blood and sweat. </p>
-                <p>Our Ethos is simple, once our athletes set foot into our gym, they forget the outside world and put their heart and body into their training for an hour or two completely removed from their troubles or triumphs outside of the gym. For the duration of their training they <span class="red-large-strong-text"> unleash their potential</span> and put in the work day in, day out with a true passion for what our gym stands for.</p>
-                <p>If you like the look of our gym, appreciate our vital place to test humanity's limits, and wish to be apart of our communit and <span class="red-large-strong-text">unleash your full potential</span>, please visit our <a href="sign-up.html">Sign Up page.</a></p>
-                <p>If you would like to learn more about how our cardinal values translates into actual performance, please visit our <a href="lifts.html">Lifts page</a></p>
+                <p>Our ethos is simple. Once our athletes set foot into our gym, they forget the outside world and put their heart, mind and body into their training for an hour or two completely removed from their troubles or triumphs outside of the gym. For the duration of their training they, <span class="red-large-strong-text"> unleash their potential</span> and put in the work, day in day out, with a true passion for what our gym stands for.</p>
+                <p>If you like the look of our gym, appreciate our vital place to test humanity's limits, and wish to be a part of our community and <span class="red-large-strong-text">unleash your full potential</span>, please visit our <a href="sign-up.html">Sign Up page.</a></p>
+                <p>If you would like to learn more about how our cardinal values translate into actual performance, please visit our <a href="lifts.html">Lifts page</a></p>
                 <p>Alternatively, perhaps if you are local to us and wish to simply gaze in awe at our feats of strength and fitness, you can find our location below.</p>
         </section>
     </div>
